# pykoala

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  KOALA_2019_10_01.py  KOALA_RSS.py  LICENSE  MANIFEST.in  Makefile  PyKOALA_2022_01_20_P3.py  PyKOALA_2022_01_25_DIVIDED.py  README.md  RSS.py  TODOLIST  _readme.md  _version.py  azure-pipelines.yml  bors.toml  codecov.yml  config_calibration_stars.yml  config_science_images.yml  constants.py  cube.py  doc-requirements.txt  io.py  ipython.html  koala.mplstyle  onedspec.py  plot_plot.py  pylint-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  testable_notebooks.txt  tox.ini  utils.py  version.txt
.circleci/: config.yml
InterpolatedCube/: InterpolatedCube.py
RSS/: KOALA_RSS.py  RSS.py  draft.py
automatic_scripts/: automatic_calibration_night.py  automatic_koala_reduce.py  koala_reduce.py  run_automatic_star.py
ci/: azure-pipelines-steps-linux.yml  azure-pipelines-steps-macos.yml  azure-pipelines-steps.yml
docs/: .readthedocs.yaml  api.rst  conf.py  index.rst  license.rst  modules.rst  pykoala.corrections.rst  pykoala.cubing.rst  pykoala.data_container.rst  pykoala.instruments.rst  pykoala.register.rst
legacy/: 2d_wavelength_solution.py  create_fibre_throughput.py  expectation_maximaztion_gaussian_cenotridu.py  fix_wavelengths.py  mask.py  measure_lsf.py  mock_rss.py  plot_plot.py  reduce_calib_stars.py  reduce_science.py  reduction_steps.py  reformat_calibration_templates.py  skyquery.py  test_registration.py  weighted_median_testing.py
observing_tools/: koala_focus.py  offset_positions.py
sandbox/: cube-interpolator.py  drizzling.py  extract_tramline.py  interpolation_kernels.py  sky-based_calibration.ipynb  sky_model.ipynb  test_onedspec.py
test/: astrometry_corr_tests.py  atm_ext_tests.py  corrections_tests.py  cubing_tests.py  fit_ppxf_solar_spec.py  flux_cal_corr_tests.py  gaussian_rss.py  raw_files.py  rss_tests.py  sky_tests.py  test_registration.py  test_units.py  throughput_corr_tests.py  twighlight_wavelength_calibration.py  twighlight_weave.py  unit_tests.py  units.py  wavelength_tests.py
tests/: EG274  HD60753  HD60753_385R  HD60753_580V  HILT600  HILT600_385R  HILT600_580V  HR7596  HR9087  correction_tests.py  cubing_tests.py  list_to_reduce.yml  reduce_calib_stars.py  reduce_calibration_star.py  reduce_night.py  reduce_science.py  reduction_steps.py  registration_tests.py  (+3 more)
(+177 files in other folders)
