[build-system]
requires = ["setuptools >= 75.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "pykoala-ifs"
dynamic = ["version"]
authors = [
  { name="Pablo Corcho-Caballero", email="p.corcho.caballero@rug.nl" },
  { name="Ángel R. López-Sánchez", email="angel.lopez-sanchez@mq.edu.au" },
  { name="Yago Ascasibar", email="yago.ascasibar@uam.es" }
]
description = "Data reduction tools for IFS data."
readme = "README.md"
keywords = ["astronomy", "IFS", "data reduction"]
license = {text = "BSD-3-Clause"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Topic :: Scientific/Engineering',
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.versioneer]
VCS = 'git'
style = 'pep440'
versionfile_source = 'src/pykoala/_version.py'
versionfile_build = 'pykoala/_version.py'
tag_prefix = 'v'

[project.urls]
Homepage = "https://github.com/pykoala/koala"
Issues = "https://github.com/pykoala/koala/issues"
